Fixes the need for html breaks in the by the numbers section

--- a/_sass/base/blocks/_home.scss
+++ b/_sass/base/blocks/_home.scss
@@ -70,6 +70,12 @@
       width: 100px;
       margin-bottom: $base-padding;
     }
+
+     .fact-words {
+      max-width: 290px;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 
   span {
